--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<body>
 		<h1 style="color:red">WARNING:</h1>
 		<p>You have a lethal virus!</p>
-		<button>Click here to download anti-virus</button>
+		<button style="cursor:pointer">Click here to download anti-virus</button>
 	</body>
 </html>
