--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<body>
 		<h1 style="color:red">WARNING:</h1>
 		<p>You have a lethal virus!</p>
+		<a href="https://www.youtube.com/">
 		<button style="cursor:pointer">Click here to download anti-virus</button>
+		</a>
 	</body>
 </html>
